<?xml version="1.0"?>
<package format="3">
  <name>fast_ffs</name>
  <version>1.0.0</version>
  <description>C++ Fast-FoundationStereo real-time stereo depth on Jetson</description>
  <maintainer email="tarun002kumar@gmail.com">Tarun Kumar</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
